refactor(pdf): 优化PDF解析器支持Markdown格式转换
- 移除换页标记注释代码，精简页面写入逻辑
- 删除冗余的字体名称获取注释文档
- 添加字体大小统计和标题层级映射功能
- 实现Markdown格式转换，支持标题和段落识别
- 使用LinkedHashMap维护字体大小顺序
- 优化文本行合并逻辑，使用getFirst()方法
- 移除多余注释和空行，清理代码结构